# dinosaur

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
.github/: ghcr.yaml
dinosaur/: app.py
dinosaur/templates/: index.html
k8s/: deployment-with-configmap.yaml  deployment.yaml  service.yaml
