[tool.poetry]
name = "dinosaur"
version = "0.1.0"
description = ""
authors = ["nownabe <nownabe@users.noreply.github.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
Jinja2 = "^3.1.2"
uvicorn = {extras = ["standard"], version = "^0.19.0"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
